[package]
name = "krocore"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
nix = { version = "0.29.0", features = [
    "process",
    "user",
    "resource",
    "fs",
    "signal",
] }
seccomp = "0.1.2"
thiserror = "1.0.63"
nu-ansi-term = "0.50.1"

[dev-dependencies]
anyhow = "1.0.88"
